--- a/index.html/index.html
+++ b/index.html/index.html
@@ -54,7 +54,7 @@
   .pregunta-block {
     margin-top: 15px;
     padding: 10px;
-    background-color: #000000;
+    background-color: #4C7C46;
     color: white;
     border-radius: 6px;
   }
@@ -72,7 +72,7 @@
   <div style="text-align: center;">
     <img id="logo" src="Capacita SM.png" alt="Capacita SM" style="max-width: 120px; margin-bottom: 10px;">
   </div>
-  <h1>CURSO: USO DE EXTINTORES – DECRETO 44</h1>
+  <h1>CURSO: PREVENCIÓN DE INCENDIO Y USO DE EXTINTORES </h1>
 
   <form id="datosCertificado">
     <label for="nombre">Nombre completo:</label>
