--- a/index.html/index.html
+++ b/index.html/index.html
@@ -72,7 +72,7 @@
   <div style="text-align: center;">
     <img id="logo" src="Capacita SM.png" alt="Capacita SM" style="max-width: 120px; margin-bottom: 10px;">
   </div>
-  <h1>CURSO: PREVENCIÓN DE INCENDIO Y USO DE EXTINTORES </h1>
+  <h1>CURSO: PREVENCIÓN DE INCENDIOS Y USO DE EXTINTORES </h1>
 
   <form id="datosCertificado">
     <label for="nombre">Nombre completo:</label>
