--- a/index.html/index.html
+++ b/index.html/index.html
@@ -113,25 +113,22 @@
       <option value="SANTA MARÍA 2420, CONCEPCIÓN">SANTA MARÍA 2420, CONCEPCIÓN</option>
     </select>
 
-    <label for="cargo">Cargo:</label>
-      <option value="">-- Seleccione --</option>
-      <option value="VENDEDOR(A)">VENDEDOR(A)</option>
-      <option value="CAJERO(A)">CAJERO(A)</option>
-      <option value="JEFE(A) DE SUCURSAL">JEFE(A) DE SUCURSAL</option>
-      <option value="AUXILIAR">AUXILIAR</option>
-      <option value="REPONEDOR">REPONEDOR</option>
-      <option value="CHOFER">CHOFER</option>
-      <option value="AUXILIAR DE REPARTO">AUXILIAR DE REPARTO</option>
-      <option value="PANADERO(A)">PANADERO(A)</option>
-      <option value="PASTELERO(A)">PASTELERO(A)</option>
-      <option value="AYUDANTE DE PANADERÍA">AYUDANTE DE PANADERÍA</option>
-      <option value="AYUDANTE DE PASTELERÍA">AYUDANTE DE PASTELERÍA</option>
-    </select>
+  <label for="cargo">Cargo:</label>
+<select id="cargo" required>
+  <option value="">-- Seleccione --</option>
+  <option value="VENDEDOR(A)">VENDEDOR(A)</option>
+  <option value="CAJERO(A)">CAJERO(A)</option>
+  <option value="JEFE(A) DE SUCURSAL">JEFE(A) DE SUCURSAL</option>
+  <option value="AUXILIAR">AUXILIAR</option>
+  <option value="REPONEDOR">REPONEDOR</option>
+  <option value="CHOFER">CHOFER</option>
+  <option value="AUXILIAR DE REPARTO">AUXILIAR DE REPARTO</option>
+  <option value="PANADERO(A)">PANADERO(A)</option>
+  <option value="PASTELERO(A)">PASTELERO(A)</option>
+  <option value="AYUDANTE DE PANADERÍA">AYUDANTE DE PANADERÍA</option>
+  <option value="AYUDANTE DE PASTELERÍA">AYUDANTE DE PASTELERÍA</option>
+</select>
 
-    <div id="otroCargoDiv" style="display:none;">
-      <label for="otroCargo">Especifique otro cargo:</label>
-      <input type="text" id="otroCargo">
-    </div>
   </form>
 
   <div id="curso">
