--- a/index.html/index.html
+++ b/index.html/index.html
@@ -82,6 +82,7 @@
     function finalizarCurso() {
       alert("¡Curso finalizado con éxito!");
     }
+  </script>
       
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   
