--- a/index.html/index.html
+++ b/index.html/index.html
@@ -339,7 +339,7 @@ y += splitTexto2.length * 10;
     doc.text("_____________________________", 20, y + 30);
     doc.text("Firma", 20, y + 37);
 
-    doc.save("Nombre.pdf");
+    doc.save(Nombre.pdf);
   };
 }
   </script>
