--- a/index.html/index.html
+++ b/index.html/index.html
@@ -41,7 +41,7 @@
     cursor: pointer;
   }
   button:hover {
-    background-color: #3b6538; /* tono más oscuro para hover */
+    background-color: #4C7C46; /* tono más oscuro para hover */
   }
   section {
     background-color: #ffffff; /* blanco para secciones de curso */
