--- a/index.html/index.html
+++ b/index.html/index.html
@@ -23,7 +23,7 @@
   label {
     margin-top: 10px;
     font-weight: bold;
-    color: #ffffff; /* gris oscuro para mayor contraste */
+    color: #A3C95A; /* gris oscuro para mayor contraste */
   }
   input, select, textarea {
     padding: 8px;
